--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,7 @@
   "name": "backbone.treemodel",
   "version": "1.0.0",
   "dependencies": {
-    "underscore": "~1.6.0",
-    "backbone": "~1.1.2"
+    "underscore": "^1.8.3",
+    "backbone": "^1.1.2"
   }
 }
